--- a/src/App/Bundle/SiteBundle/Resources/views/content/parts/contact.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/parts/contact.html.twig
@@ -1,51 +1,48 @@
-<div class="background-gray">
-    <section id="contact" class="container wow fadeInUp">
-        <h2>{{ 'app.title.contact'|trans }}</h2>
-        <p class="lead">
-            “{{ 'app.quote.contact'|trans }}”<br>- {{ 'app.quote.contact.author'|trans }}
-        </p>
-
-        <hr>
-
-        <div class="row margin-icon">
-            <div class="col-md-2 col-xs-4 margin-bt-mobile">
-                <a rel="nofollow" class="twitter" href="{{ ez_field_value(content, 'twitter_url') }}" target="_blank">
-                    <i class="fa fa-twitter"></i>
-                </a>
+{% spaceless %}
+    <div class="background-gray">
+        <section id="contact" class="container wow fadeInUp">
+            <h2>{{ 'app.title.contact'|trans }}</h2>
+            <p class="lead">
+                “{{ 'app.quote.contact'|trans }}”<br>- {{ 'app.quote.contact.author'|trans }}
+            </p>
+            <hr>
+            <div class="row margin-icon">
+                <div class="col-md-2 col-xs-4 margin-bt-mobile">
+                    <a rel="nofollow" class="twitter" href="{{ ez_field_value(content, 'twitter_url') }}" target="_blank">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                </div>
+                <div class="col-md-2 col-xs-4 margin-bt-mobile">
+                    <a rel="nofollow" class="linkedin" href="{{ ez_field_value(content, 'linkedin_url') }}" target="_blank">
+                        <i class="fa fa-linkedin"></i>
+                    </a>
+                </div>
+                <div class="col-md-2 col-xs-4 margin-bt-mobile">
+                    <a rel="nofollow" class="github" href="{{ ez_field_value(content, 'github_url') }}" target="_blank">
+                        <i class="fa fa-github-alt"></i>
+                    </a>
+                </div>
+                <div class="col-md-2 col-xs-4">
+                    <a rel="nofollow" class="instagram" href="{{ ez_field_value(content, 'instagram_url') }}" target="_blank">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
+                </div>
+                <div class="col-md-2 col-xs-4">
+                    <a rel="external" class="mail" href="mailto:{{ ez_field_value(content, 'email_contact') }}">
+                        <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
+                    </a>
+                </div>
+                <div class="col-md-2 col-xs-4">
+                    <a rel="external" class="phone" href="tel:{{ ez_field_value(content, 'phone') }}">
+                        <i class="fa fa-phone" aria-hidden="true"></i>
+                    </a>
+                </div>
             </div>
-            <div class="col-md-2 col-xs-4 margin-bt-mobile">
-                <a rel="nofollow" class="linkedin" href="{{ ez_field_value(content, 'linkedin_url') }}" target="_blank">
-                    <i class="fa fa-linkedin"></i>
-                </a>
+            <hr>
+            <div class="footer">
+                Lucas SIMONIN ©
+                <span id="copyright-year">{{ "now"|date("Y") }}</span>
             </div>
-            <div class="col-md-2 col-xs-4 margin-bt-mobile">
-                <a rel="nofollow" class="github" href="{{ ez_field_value(content, 'github_url') }}" target="_blank">
-                    <i class="fa fa-github-alt"></i>
-                </a>
-            </div>
-            <div class="col-md-2 col-xs-4">
-                <a rel="nofollow" class="instagram" href="{{ ez_field_value(content, 'instagram_url') }}" target="_blank">
-                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                </a>
-            </div>
-            <div class="col-md-2 col-xs-4">
-                <a rel="external" class="mail" href="mailto:{{ ez_field_value(content, 'email_contact') }}">
-                    <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
-                </a>
-            </div>
-            <div class="col-md-2 col-xs-4">
-                <a rel="external" class="phone" href="tel:{{ ez_field_value(content, 'phone') }}">
-                    <i class="fa fa-phone" aria-hidden="true"></i>
-                </a>
-            </div>
-        </div>
-
-
-        <hr>
-        <div class="footer">
-            Lucas SIMONIN ©
-            <span id="copyright-year">{{ "now"|date("Y") }}</span>
-        </div>
-
-    </section>
-</div>
+        </section>
+    </div>
+{% endspaceless %}
