--- a/src/App/Bundle/SiteBundle/Resources/views/content/parts/experience.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/parts/experience.html.twig
@@ -1,27 +1,29 @@
-<div class="experience row wow fadeInLeft">
-    <div class="col-md-4">
-        <h4>{{ ez_field_value(item, 'name') }}</h4>
-        <p class="experience-period">
-            <i class="fa fa-clock-o"></i>
-            {{ ez_render_field(item, 'duration') }}</p>
-    </div>
-    <div class="col-md-8">
-        <p>
-            <strong>{{ ez_render_field(item, 'name_description') }}</strong>
-            <span class="hidden-phone">
-                {{ ez_render_field(item, 'description') }}
-                <span class="experience-details">
-                    <span class="location">
-                        <i class="fa fa-map-marker"></i>
-                        {{ ez_render_field(item, 'city') }}
-                    </span>
-                    <span class="seperator">|</span>
-                    <span class="link">
-                        <i class="fa fa-link" aria-hidden="true"></i>
-                        <a rel="nofollow" href="{{ ez_field_value(item, 'website') }}" target="_blank">{{ ez_field_value(item, 'website') }}</a>
+{% spaceless %}
+    <div class="experience row wow fadeInLeft">
+        <div class="col-md-4">
+            <h4>{{ ez_field_value(item, 'name') }}</h4>
+            <p class="experience-period">
+                <i class="fa fa-clock-o"></i>
+                {{ ez_render_field(item, 'duration') }}</p>
+        </div>
+        <div class="col-md-8">
+            <p>
+                <strong>{{ ez_render_field(item, 'name_description') }}</strong>
+                <span class="hidden-phone">
+                    {{ ez_render_field(item, 'description') }}
+                    <span class="experience-details">
+                        <span class="location">
+                            <i class="fa fa-map-marker"></i>
+                            {{ ez_render_field(item, 'city') }}
+                        </span>
+                        <span class="seperator">|</span>
+                        <span class="link">
+                            <i class="fa fa-link" aria-hidden="true"></i>
+                            <a rel="nofollow" href="{{ ez_field_value(item, 'website') }}" target="_blank">{{ ez_field_value(item, 'website') }}</a>
+                        </span>
                     </span>
                 </span>
-            </span>
-        </p>
+            </p>
+        </div>
     </div>
-</div>
+{% endspaceless %}
