--- a/src/App/Bundle/SiteBundle/Resources/views/content/parts/skill.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/parts/skill.html.twig
@@ -1,30 +1,29 @@
-{% if items|length > 1 %}
-    {% set count = items|length // 2 %}
-    {% if items|length % 2 == 1 %}
-        {% set count = count + 1 %}
-    {% endif %}
-
-    <div class="col-md-6">
-        <ul class="no-bullets">
-
-            {% for item in items[:count] %}
-                <li>
-                    <span class="ability-title">{{ ez_field_value(item, 'name') }}</span>
-                    {% include 'AppSiteBundle::content/parts/skill_rating.html.twig' with {'rating': ez_field_value(item, 'note').value} %}
-                </li>
-            {% endfor %}
-        </ul>
-    </div>
-    <div class="col-md-6">
-        <ul class="no-bullets">
-            {% for item in items[count:] %}
-                <li>
-                    <span class="ability-title">{{ ez_field_value(item, 'name') }}</span>
-                    {% include 'AppSiteBundle::content/parts/skill_rating.html.twig' with {'rating': ez_field_value(item, 'note').value} %}
-                </li>
-            {% endfor %}
-        </ul>
-    </div>
+{% spaceless %}
+    {% if items|length > 1 %}
+        {% set count = items|length // 2 %}
+        {% if items|length % 2 == 1 %}
+            {% set count = count + 1 %}
+        {% endif %}
+        <div class="col-md-6">
+            <ul class="no-bullets">
+                {% for item in items[:count] %}
+                    <li>
+                        <span class="ability-title">{{ ez_field_value(item, 'name') }}</span>
+                        {% include 'AppSiteBundle::content/parts/skill_rating.html.twig' with {'rating': ez_field_value(item, 'note').value} %}
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+        <div class="col-md-6">
+            <ul class="no-bullets">
+                {% for item in items[count:] %}
+                    <li>
+                        <span class="ability-title">{{ ez_field_value(item, 'name') }}</span>
+                        {% include 'AppSiteBundle::content/parts/skill_rating.html.twig' with {'rating': ez_field_value(item, 'note').value} %}
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
     {% else %}
         <div class="col-md-6">
             <ul class="no-bullets">
@@ -36,4 +35,5 @@
                 {% endfor %}
             </ul>
         </div>
-{% endif %}
+    {% endif %}
+{% endspaceless %}
