--- a/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_header.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_header.html.twig
@@ -1,7 +1,7 @@
+{% spaceless %}
 <!--[if lt IE 10]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
-
 <header style="background-image:url('{{ ez_field_value(content, 'image_top').uri }}');">
     <div class="header-content wow fadeInUp">
         <div class="header-content-inner">
@@ -14,3 +14,4 @@
     </a>
 </header>
 <div class="clearfix"></div>
+{% endspaceless %}
