--- a/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_footer_script.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_footer_script.html.twig
@@ -1,13 +1,6 @@
 {% spaceless %}
     <script src="{{ asset('assets/app/js/app.js') }}" type="text/javascript" ></script>
     {% if app.environment == 'prod' %}
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-            ga('create', 'UA-46159303-3', 'auto');
-            ga('send', 'pageview');
-        </script>
+        <script src="https://cdn.jsdelivr.net/ga-lite/latest/ga-lite.min.js" async></script> <script> var galite = galite || {}; galite.UA = 'UA-46159303-3';</script>
     {% endif %}
 {% endspaceless %}
