--- a/src/App/Bundle/SiteBundle/Resources/views/content/parts/hreflang.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/parts/hreflang.html.twig
@@ -2,9 +2,9 @@
     {% for lang in ezpublish.availableLanguages %}
         {% do routeRef.set( "siteaccess", ezpublish.translationSiteAccess( lang ) ) %}
         {% if lang != currentLanguage %}
-            <link rel="alternate" hreflang="{{ lang|lower|split('-')[0]|slice(0, 2) }}" href="{{ url( routeRef ) }}" />
+            <link rel="alternate" hreflang="{{ lang|lower|split('-')[0]|slice(0, 2) ~ '-' ~ lang|lower|split('-')[1] }}" href="{{ url( routeRef ) }}" />
         {% else %}
-            <link rel="canonical" href="{{ app.request.get('_route') }}" />
+            <link rel="canonical" href="{{ path( "ez_urlalias", {"locationId": locationId}, true ) }}" />
         {% endif %}
     {% endfor %}
 {% endspaceless %}
