--- a/src/App/Bundle/SiteBundle/Resources/views/content/parts/hreflang.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/parts/hreflang.html.twig
@@ -4,7 +4,7 @@
         {% if lang != currentLanguage %}
             <link rel="alternate" hreflang="{{ lang|lower|split('-')[0]|slice(0, 2) ~ '-' ~ lang|lower|split('-')[1] }}" href="{{ url( routeRef ) }}" />
         {% else %}
-            <link rel="canonical" href="{{ path( "ez_urlalias", {"locationId": locationId}, true ) }}" />
+            <link rel="canonical" href="{{ absolute_url(path( "ez_urlalias", {"locationId": locationId} )) }}" />
         {% endif %}
     {% endfor %}
 {% endspaceless %}
