--- a/app/Resources/views/pagelayout/page_head.html.twig
+++ b/app/Resources/views/pagelayout/page_head.html.twig
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="google-site-verification" content="8vhqOsR5IAGpNPmlScrFqonGp3cbvD49WGmSfD1ojfk" />
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ asset('bundles/appsite/images/apple-touch-icon-57x57.png') }}" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ asset('bundles/appsite/images/apple-touch-icon-114x114.png') }}" />
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ asset('bundles/appsite/images/apple-touch-icon-72x72.png') }}" />
